# paperlib

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  config.example.toml  conftest.py  fix_plan.md  implement_plan.md  pyproject.toml  v1_3_plan.md
docs/: architecture.md  config.md  gap_analysis.md  limitations.md  operations.md  release_v1.1.md  roadmap.md  schema.md  source_inventory.md
docs/archive/: v1_0_implementation_plan.md
docs/implementation/: overview.md  phase_01_models.md  phase_02_extraction.md  phase_03_validation.md  phase_04_search_fields.md  phase_05_migration.md  phase_06_chunking.md  phase_07_rebuild_index.md  phase_08_normalize_aliases.md  phase_09_embeddings.md  phase_10_keyword_search.md  phase_11_fuzzy_search.md  phase_12_semantic_search.md  phase_13_ranking.md  phase_14_search_cli.md  phase_15_config.md  phase_16_tests.md
src/paperlib/: __about__.py  cli.py  config.py  export.py  handle.py  logging_config.py  review.py  utils.py
src/paperlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/paperlib/ai/: client.py  prompts.py
src/paperlib/store/: db.py  (+4 more)
tests/: conftest.py  test_ai_client.py  test_clean.py  test_cli.py  test_cli_phase2.py  test_cli_phase3.py  test_config.py  test_db.py  test_discover.py  test_docs.py  test_export.py  test_extract.py  test_fs.py  test_handle.py  test_identity_resolution.py  test_ingest_ai.py  test_ingest_idempotency.py  test_json_store.py  test_lookup.py  test_metadata.py  test_prompts.py  test_record.py  test_resummary.py  test_review.py  test_summarise.py  test_validate.py  test_validate_library.py
(+13 files in other folders)
