[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperlib"
version = "0.1.0"
requires-python = ">=3.14.3"
dependencies = [
    "click>=8.1",
    "pdfplumber>=0.11",
    "anthropic>=0.25",
    "python-dotenv>=1.0",
]

[project.scripts]
paperlib = "paperlib.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
openai = [
    "openai>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
